Version 0.191 (after 0.190)

debuginfod: Caching eviction logic improvements to improve retention
            of small/frequent/slow files such as Fedora's vdso.debug.

srcfiles: Can now fetch the source files of a DWARF/ELF file and
          place them into a zip.

Version 0.190 "Woke!"

CONTRIBUTING: Switch from real name policy to known identity policy.
              Updated ChangeLog policy (no more separate ChangeLog files).
              There is a SECURITY bug policy now.
              The default branch is now 'main'.

libelf: Add RELR support.

libdw: Recognize .debug_[ct]u_index sections

readelf: Support readelf -Ds, --use-dynamic --symbol.
         Support .gdb_index version 9

scrlines: New tool that compiles a list of source files associated
          with a specified dwarf/elf file.

debuginfod: Schema change (reindexing required, sorry!) for a 60%
            compression in filename representation, which was a large
            part of the sqlite index; also, more deliberate sqlite
            -wal management during scanning using the
            --scan-checkpoint option.

backends: Various LoongArch updates.

Version 0.189 "Don't deflate!"

configure: eu-nm, eu-addr2line and eu-stack can provide demangled symbols
           when linked with libstdc++. Use --disable-demangler to disable.

           A new option --enable-sanitize-memory has been added for msan
           sanitizer support.

libelf: elf_compress now supports ELFCOMPRESS_ZSTD when build against
        libzstd

libdwfl: dwfl_module_return_value_location now returns 0 (no return type)
         for DIEs that point to a DW_TAG_unspecified_type.

elfcompress: -t, --type= now support zstd if libelf has been build with
             ELFCOMPRESS_ZSTD support.

backends: Add support for LoongArch and Synopsys ARCv2 processors.

Version 0.188 "no section left behind"

readelf: Add -D, --use-dynamic option.

debuginfod-client: Add $DEBUGINFOD_HEADERS_FILE setting to supply outgoing